# blue-anchor

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
config/: model_registry.json
data_pipeline/: raw_chunk_pipeline.py  script_runtime.py  source_document_pipeline.py
data_pipeline/scripts/: 01_parse_markdown.py  02_build_domain_graph.py  03_extract_fault_records_llm.py  04_aggregate_llm_records.py  05_export_faultcase_txt_cards.py  06_build_faultcase_graph.py  90_benchmark_faultcase_no_llm_recall.py  count_content.py  (+2 more)
datasources/: registry.json
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
minirag/: __init__.py  base.py  candidate_rerank.py  chunk_recall.py  datasource_resolver.py  faultcase_alias_router.py  minirag.py  operate.py  prompt.py  utils.py
tests/: conftest.py  test_benchmark_api.py  test_candidate_rerank.py  test_chat_session_api.py  test_chunk_recall.py  test_datasource_resolver.py  test_document_lifecycle_api.py  test_entity_extraction_prompt.py  test_faultcase_alias_router.py  test_faultcase_fast_query.py  test_followup_query.py  test_graph_contract_api.py  test_limit_async_func_call.py  test_lmstudio.py  test_minirag_query_modes.py  test_openai_shim.py  test_raw_chunk_pipeline_api.py  test_raw_chunk_pipeline_service.py
tools/: csv_to_query_json.py  demo_faultcase_chunk_recall.py  demo_faultcase_rerank.py  e2e_verify_model_switch.py  find_hybrid_fails.py  fix_benchmark_unknown_evidence_ids.py  generate_balanced_ship_benchmark.py  import_equipment_aliases.py  migrate_graphml_to_neo4j.py  rebuild_query_set.py  scan_judged.py  test_payload.json  verify_neo4j_graph_parity.py
(+53 files in other folders)
